# rules_proto_grpc

./: .gitignore  WORKSPACE  repositories.bzl
docs/lang/: grpc-gateway.rst
example/grpc-gateway/gateway_grpc_library/: WORKSPACE
example/grpc-gateway/gateway_openapiv2_compile/: WORKSPACE
grpc-gateway/: BUILD.bazel  gateway_grpc_library.bzl  repositories.bzl
prebuilt/: BUILD.bazel
protobuf/: toolchains.bzl
test_workspaces/go_fixer/: WORKSPACE
tools/: BUILD.bazel
tools/rulegen/: grpc_gateway.go
