load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "macos",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

# ---- platforms defines above ----

native_binary(
    name = "protoc",
    src = select({
        ":linux": "@protoc_linux//:bin/protoc",
        ":macos": "@protoc_macos//:bin/protoc",
    }),
    out = "protoc",
)

native_binary(
    name = "fixer",
    src = select({
        ":linux": "@fixer_linux//:fixer",
        ":macos": "@fixer_macos//:fixer",
    }),
    out = "fixer",
)

buildifier(
    name = "buildifier",
    lint_mode = "warn",
    lint_warnings = [],
    mode = "fix",
)
